# game_server

./: .gitignore  AGENTS.md  pyproject.toml
docs/: character-state-transitions.md  incoming-binary-protocol.md  outgoing-binary-protocol.md  player-name-handshake.md  uv-run-command.md  world-loop-logging.md  world-snapshot-ownership.md
gameserver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: main.py
src/application/: __init__.py  dto.py  game_service.py
src/docs/: README.md
src/domain/: __init__.py  models.py  services.py
src/infrastructure/: __init__.py  codec.py  config.py  packet.py  server.py  sessions.py
src/infrastructure/tcp/: __init__.py  transport.py
